# bare

./: .gitignore  GOPHER.md  LICENSE  PLAN.md  README.md  index.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-site.yml  expire-caches.yml
docs/: GOPHER.md  architecture.c4  bare-startportal-spec.md  index.md  plan-website.md  solvoll-1993-refleksjoner.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: bookmarks.rs  commands.rs  converter.rs  fetcher.rs  gemini.rs  gemtext.rs  gopher.rs  gophermap.rs  lib.rs  main.rs  markdown.rs  settings.rs
src/js/: bookmarks.js  constants.js  dom.js  events.js  i18n.js  main.js  navigation.js  search.js  settings.js  state.js  ui.js
website/: index.html  styles.css
