[package]
name = "bare"
version = "0.1.0"
description = "En markdown-nettleser med fokus på personvern og enkelhet"
authors = ["Bare Contributors"]
license = "MIT"
repository = "https://github.com/FrankBurmo/bare"
edition = "2021"

[lib]
name = "bare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html", "simd"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
