[package]
name = "bare"
version = "0.1.1"
description = "En markdown-nettleser med fokus på personvern og enkelhet"
authors = ["Bare Contributors"]
license = "MIT"
repository = "https://github.com/FrankBurmo/bare"
edition = "2021"

[lib]
name = "bare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html", "simd"] }
reqwest = { version = "0.13", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
dirs = "6"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
html2md = "0.2"
ammonia = "4"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
